odalc_billboard/static/less/styles.less
@import "_header.less";
@import "_footer.less";
@import "_ribbon.less";

@yellow: rgb(200, 143, 42);
@purple: #383a85;
@gray: #8c8c8c;
@light_gray: #f1f2f0;
@green: #137A0F;
@light_yellow: #ffc652;

body {
	font-family: 'Roboto', sans-serif;
	text-align: center;
	margin: 0;
	padding-bottom: 60px;
	background-color: @light_gray;
	-webkit-tap-highlight-color: rgba(0,0,0,0);
}

#input-box {
	position: relative;
	#message {
		font-family: Roboto;
		width: 80%;
		font-size: 15px;
		padding: 10px;
		margin-top: 20px;
		max-width: 500px;
		text-align: center;
		border: 1px solid rgb(220, 220, 220);
		margin-bottom: 10px;

		@media all and (max-width: 420px) {
			width: 100%;
			box-sizing: border-box;
			margin-bottom: 0;
			font-size: 13px;
			padding: 7px;
		}
	}

	input#submit{
		display: block;
	  background:none;
	  border: 1px solid rgb(202, 198, 198);
	  border-radius: 1px;
	  padding: 10px 17px;
	  margin: 10px auto 0;
	  font-size: 15px;
	  background-color: @yellow;
	  color: white;
	  cursor: pointer;
	  opacity: 1;
	  &:hover {
	  	// opacity: 0.9;
	  	border: 1px solid white;
	  }

	  @media all and (max-width: 420px) {
			font-size: 13px;
			padding: 8px 15px;
		}
	}
}

#navigation {
	margin-bottom: 15px;
	font-size: 13px;
	.option {
		display: inline-block;
		cursor: pointer;
		&:not(:last-child) {
			margin-right: 20px;
		}
		&.selected {
			text-decoration: underline;
		}
	}
}

#posts {
	padding: 20px 10px 0;
	text-align: center;
	.post {
		display: table;
		position: relative;
		width: 100%;
		max-width: 500px;
		min-height: 68px;

		background-color: white;
		margin: auto;
		border-radius: 5px;
		margin-bottom: 20px;		

		@media all and (max-width: 420px) {
			width: 100%;
		}
		.date {
			font-size: 11px;
			position: absolute;
			bottom: 3px;
			left: 6px;
			color: gray;

		}
		.points-section {
			display: table-cell;

			width: 42px;
			box-sizing: border-box;
			font-size: 11px;
			padding-top: 44px;
			margin-left: -13px;
			color: gray;
		}
		.text-section {
			display: table-cell;

			padding: 12px 12px;
			box-sizing: border-box;
			font-size: 14px;
			vertical-align: top;
			@media all and (max-width: 420px) {
				font-size: 12px;
				width: calc(100% - 35px);
				width: -webkit-calc(100% - 35px);
				width: -moz-calc(100% - 35px);
				width: 75%;
			}			
		}
		.vote-section {
			padding-right: 7px;
			display: table-cell;
			width: 23px;

			vertical-align: top;
			margin-top: 3px;			
			font-size: 25px;
			.vote-button {
				cursor: pointer;
				color: @gray;
				height: 28px;				

				.fa-thumbs-up {
					line-height: 20px;
				}
				.fa-thumbs-up.clicked { color: @green; }
				.fa-thumbs-down.clicked { color: rgb(209, 24, 24); }
			}
		}
	}
}

